Adjust main page class to avoid being footer

--- a/assets/stylesheets/application.css
+++ b/assets/stylesheets/application.css
@@ -129,7 +129,7 @@ body {
                     color: #C7BDB1;
                 }
 
-.page-footer {
+.page-details {
     position: absolute;
     width: 75%;
     height: auto;
