Highlight links in all descs

--- a/assets/stylesheets/application.css
+++ b/assets/stylesheets/application.css
@@ -208,7 +208,7 @@ body {
                         text-align: justify;
                     }
 
-                        .desc-spaced a {
+                        .page-row-desc a {
                             border-bottom: 1px dotted #666;
                         }
 
